tests/ui/invalid_intopy_with.stderr
error[E0308]: mismatched types
 --> tests/ui/invalid_intopy_with.rs:5:27
  |
3 | #[derive(IntoPyObject, IntoPyObjectRef)]
  |          ------------ expected due to this
4 | struct InvalidIntoPyWithFn {
5 |     #[pyo3(into_py_with = into)]
  |                           ^^^^ expected fn pointer, found fn item
  |
  = note: expected fn pointer `for<'a> fn(Cow<'a, _>, Python<'py>) -> Result<pyo3::Bound<'py, PyAny>, PyErr>`
                found fn item `for<'a> fn(String, Python<'a>) -> Result<pyo3::Bound<'a, PyAny>, PyErr> {into}`

error[E0308]: mismatched types
 --> tests/ui/invalid_intopy_with.rs:5:27
  |
3 | #[derive(IntoPyObject, IntoPyObjectRef)]
  |                        --------------- expected due to this
4 | struct InvalidIntoPyWithFn {
5 |     #[pyo3(into_py_with = into)]
  |                           ^^^^ expected fn pointer, found fn item
  |
  = note: expected fn pointer `for<'a> fn(Cow<'a, _>, Python<'py>) -> Result<pyo3::Bound<'py, PyAny>, PyErr>`
                found fn item `for<'a> fn(String, Python<'a>) -> Result<pyo3::Bound<'a, PyAny>, PyErr> {into}`
